--- a/static/style.css
+++ b/static/style.css
@@ -5,13 +5,22 @@ html {
     background-color: #333;
     color: #f7f7f7;
 
-    margin: 16px;
+    margin: 4px;
+}
+
+h1 {
+    font-size: 1.5em;
+    margin: 0.2rem;
+}
+
+p {
+    margin: 0 0.25rem;
 }
 
 .drop_zone {
     border: 3px dashed #ccc;
     min-height: 4rem;
-    padding: 16px;
+    padding: 8px;
     text-align: center;
 }
 
@@ -21,4 +30,6 @@ html {
 
 .error {
     color: #f00;
+    font-size: 1rem;
+    min-height: 1.25rem;
 }
